--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@testing-library/jest-dom": "^5.11.0",
     "@testing-library/react": "^10.4.4",
     "@types/jest": "^26.0.3",
+    "@types/react-redux": "^7.1.9",
     "@types/webpack": "^4.41.20",
     "@typescript-eslint/eslint-plugin": "^2.34.0",
     "@typescript-eslint/parser": "^2.34.0",
@@ -67,7 +68,12 @@
     "@patternfly/react-core": "^4.23.1",
     "@types/react": "^16.9.41",
     "@types/react-dom": "^16.9.8",
+    "axios": "^0.19.2",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
+    "typesafe-actions": "^5.1.0"
   }
 }
