feat: connect application to redux store
Add lifecycle hooks to localtime component

Signed-off-by: Renan Rodrigo <rebarbos@redhat.com>

--- a/.eslintrc
+++ b/.eslintrc
@@ -31,6 +31,8 @@
     ],
     "rules": {
         "react/jsx-filename-extension": [0],
+        "react/jsx-one-expression-per-line": [0],
+        "@typescript-eslint/explicit-function-return-type": [0],
         "import/extensions": [
             "error",
             "ignorePackages",
@@ -51,7 +53,7 @@
     },
     "overrides": [
         {
-          "files": ["src/**/*.test.tsx"],
+          "files": ["src/**/*.test.tsx", "src/tests/*"],
           "rules": {
             "import/no-extraneous-dependencies": [0]
           }
