--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/jest": "^26.0.3",
     "@types/react-redux": "^7.1.9",
     "@types/webpack": "^4.41.20",
+    "@types/redux-mock-store": "^1.0.2",
     "@typescript-eslint/eslint-plugin": "^2.34.0",
     "@typescript-eslint/parser": "^2.34.0",
     "css-loader": "^3.6.0",
@@ -54,6 +55,7 @@
     "mini-css-extract-plugin": "^0.9.0",
     "prettier": "^2.0.5",
     "raw-loader": "^4.0.1",
+    "redux-mock-store": "^1.5.4",
     "ts-jest": "^25.5.1",
     "ts-loader": "^7.0.5",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
