test: add tests for saga, reducer and component
Signed-off-by: Renan Rodrigo <rebarbos@redhat.com>

--- a/.eslintrc
+++ b/.eslintrc
@@ -53,7 +53,7 @@
     },
     "overrides": [
         {
-          "files": ["src/**/*.test.tsx", "src/tests/*"],
+          "files": ["src/**/*.test.tsx", "src/**/*.test.ts", "src/tests/*"],
           "rules": {
             "import/no-extraneous-dependencies": [0]
           }
