--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "prettier": "^2.0.5",
     "raw-loader": "^4.0.1",
     "redux-mock-store": "^1.5.4",
+    "redux-saga-test-plan": "^4.0.0-rc.3",
     "ts-jest": "^25.5.1",
     "ts-loader": "^7.0.5",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
