fix(lint): disable defaultProps rule
Signed-off-by: Renan Rodrigo <rebarbos@redhat.com>

--- a/.eslintrc
+++ b/.eslintrc
@@ -33,6 +33,7 @@
         "react/jsx-filename-extension": [0],
         "react/jsx-one-expression-per-line": [0],
         "@typescript-eslint/explicit-function-return-type": [0],
+        "react/require-default-props": [0],
         "import/extensions": [
             "error",
             "ignorePackages",
