--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/jest": "^26.0.4",
     "@types/react-redux": "^7.1.9",
     "@types/webpack": "^4.41.21",
+    "@types/react-router-dom": "^5.1.5",
     "@types/redux-mock-store": "^1.0.2",
     "@typescript-eslint/eslint-plugin": "^2.34.0",
     "@typescript-eslint/parser": "^2.34.0",
@@ -75,6 +76,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
+    "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
     "typesafe-actions": "^5.1.0"
