--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
   "dependencies": {
     "@patternfly/react-core": "^4.23.1",
     "@types/react": "^16.9.43",
+    "@patternfly/react-icons": "^4.4.2",
     "@types/react-dom": "^16.9.8",
     "axios": "^0.19.2",
     "react": "^16.13.1",
