--- a/.eslintrc
+++ b/.eslintrc
@@ -34,6 +34,7 @@
         "react/jsx-one-expression-per-line": [0],
         "@typescript-eslint/explicit-function-return-type": [0],
         "react/require-default-props": [0],
+        "no-restricted-syntax": [0],
         "import/extensions": [
             "error",
             "ignorePackages",
