--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,6 +7,7 @@ updates:
   open-pull-requests-limit: 10
   reviewers:
   - StykMartin
+  - renanrodrigo
   ignore:
   - dependency-name: "@patternfly/react-icons"
     versions:
